@@ -1,1 +1,2 @@
+/usr/share/gtk-doc/html/gail-libgail-util3 /usr/share/doc/libgail-3-dev/html
 /usr/share/gtk-doc/html/gail-libgail-util3 /usr/share/doc/libgail-3-doc/html
