@@ -12,6 +12,9 @@ gtk+3.0 (3.24.10-2) UNRELEASED; urgency=medium
     gtk-doc documentation is technically a functional interface
     (Policy §12.3), because other packages can build-depend on it and
     use it to fix cross-references.
+  * Install symlinks to gtk-doc in both /usr/share/doc/libgtk-3-doc
+    (traditional location) and /usr/share/doc/libgtk-3-dev ("main package"
+    for developer documentation, as recommended in Policy §12.3)
 
  -- Simon McVittie <smcv@debian.org>  Thu, 18 Jul 2019 09:40:24 +0100
 
